# howto-rust-pulsar-producer

./: Cargo.toml  LICENSE  README.md
src/: main.rs  model.rs  schema.rs  setting.rs  tx.proto
