[package]
name = "producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
anyhow = "1.0.75"
log = "0.4.20"
env_logger = "0.10.1"
chrono = { version = "0.4.31", features = ["serde"] }
once_cell = "1.18.0"
dotenvy = "0.15.7"

tokio = { version = "1.34.0", features = ["full"] }

tokio-postgres = { version = "0.7.10", features=["with-serde_json-1","with-chrono-0_4"]}
deadpool-postgres = "0.11.0"
postgres-from-row = "0.5.2"
postgres-types = { version = "0.1.2", features = ["derive"]}

pulsar = "6.1.0"

url = "2.5.0"
uuid = { version = "1.6.1", features = ["v4", "fast-rng"]}
duplicate = "1.0.0"

[profile.release]
lto = true
strip = true
codegen-units = 1