[package]
name = "producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.111"
serde = { version = "1.0.194", features = ["derive"] }
anyhow = "1.0.79"
log = { version = "0.4.20", features = ["release_max_level_info"] }
env_logger = "0.10.1"
chrono = { version = "0.4.31", default-features = false, features = ["clock","serde"] }
once_cell = "1.19.0"
dotenvy = "0.15.7"

tokio = { version = "1.35.1", features = ["full"] }

tokio-postgres = { version = "0.7.10", features=["with-serde_json-1","with-chrono-0_4"]}
postgres-from-row = "0.5.2"

pulsar = { version = "6.1.0", default-features = false, features = ["tokio-runtime", "compression"]}
uuid = { version = "1.6.1", features = ["v4", "fast-rng"]}
duplicate = "1.0.0"
strum = { version = "0.25.0", features = ["derive"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
